--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -11,7 +11,8 @@
     <div>
       <form id="new-todo-frm">
         <label for="todo">Enter a new todo:</label>
-        <input type="text" name="todo" id="todo" />
+        <input class="todos" type="text" name="todo" id="todo" />
+        <input class="todos" type="text" name="name" id="name" />
         <input type="submit" value="Add Todo" />
       </form>
     </div>
