--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>My List of Todos</title>
     <meta charset="UTF-8" />
   </head>
 
@@ -12,7 +12,6 @@
       <form id="new-todo-frm">
         <label for="todo">Enter a new todo:</label>
         <input class="todos" type="text" name="todo" id="todo" />
-        <input class="todos" type="text" name="name" id="name" />
         <input type="submit" value="Add Todo" />
       </form>
     </div>
@@ -20,6 +19,6 @@
     <!-- list of todos -->
     <ul id="todos"></ul>
 
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
