--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -9,7 +9,12 @@
     <h1>My list of todos</h1>
 
     <div>
-      <form id="new-todo-frm">
+
+      <div id="error-msg">
+
+      </div>
+
+      <form method="GET" action="" id="new-todo-frm">
         <label for="todo">Enter a new todo:</label>
         <input class="todos" type="text" name="todo" id="todo" />
         <input type="submit" value="Add Todo" />
