--- a/demo-pet/pets.html
+++ b/demo-pet/pets.html
@@ -14,7 +14,19 @@
     <title>Pets: Element creation</title>
   </head>
   <body>
-    <section class="pets-container">
+
+    <h1>PetShop</h1>
+
+    <form id="frm-pet">
+
+      <input type="text" name="name" id="name" placeholder="Name">
+      <input type="text" name="type" id="type" placeholder="Species">
+      <input type="text" name="age" id="age" placeholder="Age">
+      <input type="submit" value="Add">
+
+    </form>
+
+    <section id="pets-container">
       <!-- Pet articles are going to be added here -->
     </section>
   </body>
