--- a/demo-pet/pets.html
+++ b/demo-pet/pets.html
@@ -14,8 +14,9 @@
     <title>Pets: Element creation</title>
   </head>
   <body>
-    <section class="pets-container">
+    <section id="pets-container">
       <!-- Pet articles are going to be added here -->
+      
     </section>
   </body>
 </html>
