--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>My List of Todos</title>
     <meta charset="UTF-8" />
+    
   </head>
 
   <body>
@@ -17,8 +18,13 @@
     </div>
 
     <!-- list of todos -->
-    <ul id="todos"></ul>
+    <ul id="todos">
+
+
+    </ul>
+
 
     <script src="./app.js"></script>
+   
   </body>
 </html>
