--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My List of Todos</title>
-    <meta charset="UTF-8" />
-  </head>
 
-  <body>
-    <h1>My list of todos</h1>
+<head>
+  <title>My List of Todos</title>
+  <meta charset="UTF-8" />
+</head>
 
-    <div>
-      <form id="new-todo-frm">
-        <label for="todo">Enter a new todo:</label>
-        <input class="todos" type="text" name="todo" id="todo" />
-        <input type="submit" value="Add Todo" />
-      </form>
-    </div>
+<body>
+  <h1>My list of todos</h1>
 
-    <!-- list of todos -->
-    <ul id="todos"></ul>
+  <div>
+    <form id="new-todo-frm">
+      <label for="todo">Enter a new todo:</label>
+      <input class="todos" type="text" name="todo" id="todo" />
+      <input type="submit" value="Add Todo" />
+    </form>
+  </div>
 
-    <script src="./app.js"></script>
-  </body>
+  <!-- list of todos -->
+  <ul id="todos">
+    <li>Walk the dog</li>
+
+  </ul>
+
+  <script src="./app.js"></script>
+</body>
+
 </html>
