--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -17,7 +17,10 @@
     </div>
 
     <!-- list of todos -->
-    <ul id="todos"></ul>
+    <ul id="todos">
+
+
+    </ul>
 
     <script src="./app.js"></script>
   </body>
