--- a/demo-todo/index.html
+++ b/demo-todo/index.html
@@ -11,13 +11,16 @@
     <div>
       <form id="new-todo-frm">
         <label for="todo">Enter a new todo:</label>
-        <input class="todos" type="text" name="todo" id="todo" />
+        <input class="todos" type="text" name="todo" />
         <input type="submit" value="Add Todo" />
       </form>
     </div>
 
     <!-- list of todos -->
-    <ul id="todos"></ul>
+    <ul id="todos">
+
+
+    </ul>
 
     <script src="./app.js"></script>
   </body>
